Promo Bar Final

--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
     <script src="app.js" defer></script>
   </head>
   <body>
-    <!--Promo bar - Bar with the promo text-->
+    <!--Promo Bar - Bar with the promo text-->
     <div class="promo_bar d-flex justify-content-center">
       <p>
         FREE delivery & 40% Discount for next 3 orders! Place your 1st order in.
