--- a/home.html
+++ b/home.html
@@ -28,6 +28,7 @@
       <p>
         FREE delivery & 40% Discount for next 3 orders! Place your 1st order in.
       </p>
+
       <p class="ms-5">Until the end of the sale:</p>
       <div class="time_left d-flex mx-2">
         <div class="d-flex">
@@ -52,6 +53,7 @@
       <!--Info bar-->
       <div class="info_bar d-flex gap-4 mt-1 mb-0">
         <a href="" class="text-decoration-none">About Us</a>
+        <a href="" class="text-decoration-none"> Track order</a>
         <p class="mb-0">
           We delivery every day from
           <span class="text-danger fw-bold">07:00 to 20:00</span>
@@ -68,31 +70,69 @@
           </select>
         </div>
         <button id="theme_switch" class="border-0">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            height="24px"
-            viewBox="0 -960 960 960"
-            width="24px"
-            fill="#5f6368"
-          >
-            <path
-              d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Zm0-80q88 0 158-48.5T740-375q-20 5-40 8t-40 3q-123 0-209.5-86.5T364-660q0-20 3-40t8-40q-78 32-126.5 102T200-480q0 116 82 198t198 82Zm-10-270Z"
-            />
-          </svg>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            height="24px"
-            viewBox="0 -960 960 960"
-            width="24px"
-            fill="#F9DB78"
-          >
-            <path
-              d="M480-280q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Z"
-            />
-          </svg>
+          <img src="icons/dark mode_moon.svg" alt="dark mode" />
+
+          <img src="icons/light mode.svg" alt="light mode" />
         </button>
       </div>
+
       <!--Navigation bar- The logo, search bar,account ...-->
+      <nav class="navbar p-0 navbar-expand">
+        <!-- Logo -->
+        <img class="logo" src="images/logo.png" alt="Logo" />
+        <h3>TinaStore</h3>
+        <!--Nav link left side-->
+        <ul class="delivery navbar-nav">
+          <li class="nav-item d-flex text-center">
+            <a class="nav-link d-flex" href="#">
+              <img src="icons/location.svg" alt="Location Icon" />
+              <p class="mt-4">
+                Deliver to <br />
+                <span class="text-dark fw-bold">All</span>
+              </p>
+            </a>
+          </li>
+        </ul>
+
+        <!--Search bar-->
+        <div class="search_bar input-group">
+          <input
+            class="form-control"
+            type="search"
+            placeholder="Search for products, categories or brands..."
+            aria-label="Search"
+          />
+          <button class="btn btn-outline-secondary">
+            <img src="icons/search.svg" alt="search" />
+          </button>
+        </div>
+
+        <!--Nav links right side-->
+
+        <ul class="nav d-flex align-items-center">
+          <!-- Account -->
+          <li class="sign_in nav-item d-flex align-items-center ms-2">
+            <a class="nav-link d-flex p-2 ms-2" href="#">
+              <img src="icons/Account.svg" alt="Location Icon" />
+              <p class="mt-3 ms-2">
+                Sign in <br />
+                <span class="account text-dark fw-bold">Account</span>
+              </p>
+            </a>
+          </li>
+          <li class="nav-item d-flex">
+            <a href="" class="nav-link p-0"
+              ><img src="icons/wishlist.svg" alt=""
+            /></a>
+          </li>
+          <li nav-item d-flex>
+            <a class="nav-link" href=""
+              ><img src="icons/shoping cart.svg" alt=" Shopping Cart Icon"
+            /></a>
+          </li>
+        </ul>
+      </nav>
+
       <!--Hero section-->
       <!--Sidebar- All categories-->
       <!--Home bar- -->
