Home Bar Layout-not finished

--- a/home.html
+++ b/home.html
@@ -111,7 +111,7 @@
 
         <ul class="nav d-flex align-items-center">
           <!-- Account -->
-          <li class="sign_in nav-item d-flex align-items-center ms-2">
+          <li class="sign_in nav-item d-flex ms-2">
             <a class="nav-link d-flex p-2 ms-2" href="#">
               <img src="icons/Account.svg" alt="Location Icon" />
               <p class="mt-3 ms-2">
@@ -134,8 +134,105 @@
       </nav>
 
       <!--Hero section-->
-      <!--Sidebar- All categories-->
-      <!--Home bar- -->
+      <div class="d-flex align-items-center">
+        <!-- Sidebar Menu -->
+        <div class="dropdown_container me-2">
+          <a
+            href=""
+            class="dropdown m-2 p-2"
+            role="button"
+            id="dropdown"
+            data-bs-toggle="dropdown"
+            aria-expanded="false"
+            ><img class="ms-2 me-2" src="icons/All cate.svg" alt="" />All
+            categories <span></span
+          ></a>
+          <ul class="dropdown-menu p-0">
+            <li class="dropdown-item">
+              <a href="">
+                <img class="ms-2 me-2" src="icons/F&V.svg" alt="" />Fruits &
+                Vegetables</a
+              >
+            </li>
+            <li class="dropdown-item">
+              <a href="">
+                <img class="ms-2 me-2" src="icons/M&S.svg" alt="" /> Meat &
+                Seafood</a
+              >
+            </li>
+            <li class="dropdown-item">
+              <a href=""
+                ><img class="ms-2 me-2" src="icons/Dairy.svg" alt="" /> Dairy</a
+              >
+            </li>
+            <li class="dropdown-item">
+              <a href="">
+                <img class="ms-2 me-2" src="icons/bakery.svg" alt="" />Bakery</a
+              >
+            </li>
+            <li class="dropdown-item">
+              <a href="">
+                <img class="ms-2 me-2" src="icons/snacks.svg" alt="" /> Biscuits
+                & Snacks</a
+              >
+            </li>
+            <li class="dropdown-item">
+              <a href=""
+                ><img class="ms-2 me-2" src="icons/drinks.svg" alt="" /> Drinks
+              </a>
+            </li>
+            <li class="dropdown-item">
+              <a href="">
+                <img class="ms-2 me-2" src="icons/toys.svg" alt="" />Babies
+              </a>
+            </li>
+            <li class="dropdown-item">
+              <a href="">
+                <img class="ms-2 me-2" src="icons/beauty.svg" alt="" /> Health &
+                Beauty</a
+              >
+            </li>
+            <li class="dropdown-item">
+              <a href=""
+                ><img class="ms-2 me-2" src="icons/household.svg" alt="" />
+                Household Needs</a
+              >
+            </li>
+            <li class="dropdown-item">
+              <a href=""
+                ><img class="ms-2 me-2" src="icons/pets.svg" alt="" /> Pets</a
+              >
+            </li>
+          </ul>
+        </div>
+        <!--Home bar- -->
+        <div class="home_bar navbar navbar-expand-lg border-bottom p-0">
+          <ul class="navbar-nav">
+            <li class="nav-item mx-3">
+              <a class="nav-link active" href="#">Home</a>
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link" href="#">Leaflet</a>
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link" href="#">Clubcard</a>
+            </li>
+
+            <li class="nav-item mx-2">
+              <a class="nav-link" href="#">Blog</a>
+            </li>
+            <li class="nav-item mx-2">
+              <a class="nav-link" href="#">Contact Us</a>
+            </li>
+            <li class="sale nav-item">
+              <a class="nav-link text-danger fw-bold" href="#">
+                Almost Finished <span class="badge bg-danger">SALE</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+
       <!--Slide-->
       <!--Features - where highlight the features of the online store-->
     </div>
