--- a/home.html
+++ b/home.html
@@ -80,29 +80,25 @@
       <nav class="navbar p-0 navbar-expand">
         <!-- Logo -->
         <img class="logo" src="images/logo.png" alt="Logo" />
-        <h3>TinaStore</h3>
+        <h4>TinaStore</h4>
         <!--Nav link left side-->
-        <ul class="delivery navbar-nav">
-          <li class="nav-item d-flex text-center">
-            <a class="nav-link d-flex" href="#">
-              <img src="icons/location.svg" alt="Location Icon" />
-              <p class="mt-4">
-                Deliver to <br />
-                <span class="text-dark fw-bold">All</span>
-              </p>
-            </a>
-          </li>
-        </ul>
+        <a class="delivery nav-link d-flex ms-4" href="#">
+          <img src="icons/location.svg" alt="Location Icon" />
+          <p class="mt-4 ms-1 me-4">
+            Deliver to <br />
+            <span class="text-dark fw-bold">All</span>
+          </p>
+        </a>
 
         <!--Search bar-->
-        <div class="search_bar input-group">
+        <div class="search_bar d-flex flex-grow-1 mx-3">
           <input
-            class="form-control"
+            class="form-control p-0"
             type="search"
-            placeholder="Search for products, categories or brands..."
+            placeholder="   Search for products, categories or brands..."
             aria-label="Search"
           />
-          <button class="btn btn-outline-secondary">
+          <button class="btn p-2 m-0">
             <img src="icons/search.svg" alt="search" />
           </button>
         </div>
@@ -111,129 +107,178 @@
 
         <ul class="nav d-flex align-items-center">
           <!-- Account -->
-          <li class="sign_in nav-item d-flex ms-2">
-            <a class="nav-link d-flex p-2 ms-2" href="#">
+          <li class="sign_in nav-item">
+            <a class="nav-link d-flex p-1 text-reset" href="">
               <img src="icons/Account.svg" alt="Location Icon" />
-              <p class="mt-3 ms-2">
+              <p class="account mt-3 ms-2">
                 Sign in <br />
                 <span class="account text-dark fw-bold">Account</span>
               </p>
             </a>
           </li>
-          <li class="nav-item d-flex">
+          <!-- Wishlist -->
+          <li class="nav-item ms-3">
             <a href="" class="nav-link p-0"
               ><img src="icons/wishlist.svg" alt=""
             /></a>
           </li>
-          <li nav-item d-flex>
+          <!-- Shopping cart-->
+          <li class="nav-item ms-2">
             <a class="nav-link" href=""
-              ><img src="icons/shoping cart.svg" alt=" Shopping Cart Icon"
+              ><img src="icons/shopping cart.svg" alt=" Shopping Cart Icon"
             /></a>
           </li>
         </ul>
       </nav>
+      <!-- Sidebar Menu -->
+      <div class="home_bar navbar navbar-expand-lg p-0">
+        <div class="all_cat d-flex me-3">
+          <a href="" class="text-decoration-none me-5 m-2" id="dropdown"
+            ><img class="ms-2 me-2" src="icons/All cate.svg" alt="" />All
+            categories
+          </a>
+          <img class="pt-2 ms-3" src="icons/arrow_down.svg" alt="" />
+        </div>
+        <!--Home bar -->
+        <ul class="navbar-nav">
+          <li class="nav-item mx-3">
+            <a class="nav-link active" href="#">Home</a>
+          </li>
+          <li class="nav-item mx-2">
+            <a class="nav-link" href="#">Leaflet</a>
+          </li>
+          <li class="nav-item mx-2">
+            <a class="nav-link" href="#">Clubcard</a>
+          </li>
+          <li class="nav-item mx-2">
+            <a class="nav-link" href="#">Blog</a>
+          </li>
+          <li class="nav-item mx-2">
+            <a class="nav-link" href="#">Contact Us</a>
+          </li>
+          <li class="sale nav-item">
+            <a class="nav-link text-danger fw-bold" href="#">
+              Almost Finished <span class="badge bg-danger">SALE</span>
+            </a>
+          </li>
+        </ul>
+      </div>
 
       <!--Hero section-->
-      <div class="d-flex align-items-center">
-        <!-- Sidebar Menu -->
-        <div class="dropdown_container me-2">
-          <a
-            href=""
-            class="dropdown m-2 p-2"
-            role="button"
-            id="dropdown"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-            ><img class="ms-2 me-2" src="icons/All cate.svg" alt="" />All
-            categories <span></span
-          ></a>
-          <ul class="dropdown-menu p-0">
-            <li class="dropdown-item">
-              <a href="">
+      <!--Slide-->
+      <div class="hero d-flex">
+        <div class="cat_list">
+          <ul class="list-unstyled">
+            <li class="d-flex align-items-center">
+              <a class="text-decoration-none text-reset p-2" href="">
                 <img class="ms-2 me-2" src="icons/F&V.svg" alt="" />Fruits &
                 Vegetables</a
               >
             </li>
-            <li class="dropdown-item">
-              <a href="">
-                <img class="ms-2 me-2" src="icons/M&S.svg" alt="" /> Meat &
-                Seafood</a
+            <li class="dropend d-flex align-items-center">
+              <a
+                class="dropdown-toggle text-decoration-none text-reset p-2"
+                href="#"
+                role="button"
+                id="dropdownMenuLink"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                <img class="ms-2 me-2" src="icons/M&S.svg" alt="" /> Meat & Fish
+                <span class="dropdown_arrow">
+                  <img src="icons/arrow_rigth.svg" alt=""
+                /></span>
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                <li><a class="dropdown-item" href="#">Beef</a></li>
+                <li><a class="dropdown-item" href="#">Chicken</a></li>
+                <li><a class="dropdown-item" href="#">Seafood</a></li>
+              </ul>
+            </li>
+            <li class="d-flex align-items-center">
+              <a class="text-decoration-none text-reset p-2" href="">
+                <img class="ms-2 me-2" src="icons/frozen.svg" alt="" /> Frozen
+                Food</a
               >
             </li>
-            <li class="dropdown-item">
-              <a href=""
+            <li class="d-flex align-items-center">
+              <a class="text-decoration-none text-reset p-2" href=""
                 ><img class="ms-2 me-2" src="icons/Dairy.svg" alt="" /> Dairy</a
               >
             </li>
-            <li class="dropdown-item">
-              <a href="">
+            <li class="d-flex align-items-center">
+              <a class="text-decoration-none text-reset p-2" href="">
                 <img class="ms-2 me-2" src="icons/bakery.svg" alt="" />Bakery</a
               >
             </li>
-            <li class="dropdown-item">
-              <a href="">
+            <li class="d-flex align-items-center">
+              <a class="text-decoration-none text-reset p-2" href="">
                 <img class="ms-2 me-2" src="icons/snacks.svg" alt="" /> Biscuits
                 & Snacks</a
               >
             </li>
-            <li class="dropdown-item">
-              <a href=""
+            <li class="d-flex align-items-center">
+              <a class="text-decoration-none text-reset p-2" href=""
                 ><img class="ms-2 me-2" src="icons/drinks.svg" alt="" /> Drinks
               </a>
             </li>
-            <li class="dropdown-item">
-              <a href="">
+            <li class="d-flex align-items-center">
+              <a class="text-decoration-none text-reset p-2" href="">
                 <img class="ms-2 me-2" src="icons/toys.svg" alt="" />Babies
               </a>
             </li>
-            <li class="dropdown-item">
-              <a href="">
+            <li class="d-flex align-items-center">
+              <a class="text-decoration-none text-reset p-2" href="">
                 <img class="ms-2 me-2" src="icons/beauty.svg" alt="" /> Health &
                 Beauty</a
               >
             </li>
-            <li class="dropdown-item">
-              <a href=""
+            <li class="d-flex align-items-center">
+              <a class="text-decoration-none text-reset p-2" href=""
                 ><img class="ms-2 me-2" src="icons/household.svg" alt="" />
-                Household Needs</a
-              >
+                Household & Cleaning
+              </a>
             </li>
-            <li class="dropdown-item">
-              <a href=""
-                ><img class="ms-2 me-2" src="icons/pets.svg" alt="" /> Pets</a
+            <li class="d-flex align-items-center">
+              <a class="text-decoration-none text-reset p-2" href=""
+                ><img class="ms-2 me-2" src="icons/pets.svg" alt="" /> Pet
+                Care</a
               >
             </li>
           </ul>
         </div>
-        <!--Home bar- -->
-        <div class="home_bar navbar navbar-expand-lg border-bottom p-0">
-          <ul class="navbar-nav">
-            <li class="nav-item mx-3">
-              <a class="nav-link active" href="#">Home</a>
-            </li>
-            <li class="nav-item mx-2">
-              <a class="nav-link" href="#">Leaflet</a>
-            </li>
-            <li class="nav-item mx-2">
-              <a class="nav-link" href="#">Clubcard</a>
-            </li>
+        <!--Hero img -->
+        <div class="hero_img ms-4 mt-4 position-relative">
+          <div class="text_hero position-absolute m-4 p-4">
+            <p class="">Weekend discount</p>
+            <h1>
+              Get the best quality <br />
+              products at the lowest <br />
+              prices
+            </h1>
+            <h6 class="mb-4">
+              We have prepared special discounts for you on grocery <br />
+              products. Don't miss these opportunities...
+            </h6>
+            <div class="d-flex">
+              <button class="shop_nowbtn me-3">Shop Now</button>
+              <h3 class="new_price mb-0">
+                €27.99
+                <span class="old_price text-decoration-line-through"
+                  >€57.99</span
+                >
+                <br />
+                <span class="mini_text d-flex"
+                  >Don't miss this limited time offer.</span
+                >
+              </h3>
+            </div>
+          </div>
 
-            <li class="nav-item mx-2">
-              <a class="nav-link" href="#">Blog</a>
-            </li>
-            <li class="nav-item mx-2">
-              <a class="nav-link" href="#">Contact Us</a>
-            </li>
-            <li class="sale nav-item">
-              <a class="nav-link text-danger fw-bold" href="#">
-                Almost Finished <span class="badge bg-danger">SALE</span>
-              </a>
-            </li>
-          </ul>
+          <img class="img-fluid" src="images/hero_img.jpg" alt="" />
         </div>
       </div>
 
-      <!--Slide-->
       <!--Features - where highlight the features of the online store-->
     </div>
   </body>
