--- a/home.html
+++ b/home.html
@@ -262,7 +262,7 @@
             </h6>
             <div class="d-flex">
               <button class="shop_nowbtn me-3">Shop Now</button>
-              <h3 class="new_price mb-0">
+              <h4 class="new_price mb-0">
                 €27.99
                 <span class="old_price text-decoration-line-through"
                   >€57.99</span
@@ -271,7 +271,7 @@
                 <span class="mini_text d-flex"
                   >Don't miss this limited time offer.</span
                 >
-              </h3>
+              </h4>
             </div>
           </div>
 
@@ -280,6 +280,28 @@
       </div>
 
       <!--Features - where highlight the features of the online store-->
+      <div class="features d-flex mt-3">
+        <img src="icons/pay_types.svg" alt="" />
+        <h6 class="ms-2 me-3">
+          Various payment types <br />
+          <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</span>
+        </h6>
+        <img src="icons/sales.svg" alt="" />
+        <h6 class="ms-2 me-3">
+          New stocks and sales <br />
+          <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</span>
+        </h6>
+        <img src="icons/Quality.svg" alt="" />
+        <h6 class="ms-2 me-3">
+          Quality assurance <br />
+          <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</span>
+        </h6>
+        <img src="icons/delivery.svg" alt="" />
+        <h6 class="ms-2">
+          Delivery in 1 hour <br />
+          <span>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</span>
+        </h6>
+      </div>
     </div>
   </body>
 </html>
