--- a/home.html
+++ b/home.html
@@ -133,35 +133,23 @@
       <!-- Sidebar Menu -->
       <div class="home_bar navbar navbar-expand-lg p-0">
         <div class="all_cat d-flex me-3">
-          <a href="" class="text-decoration-none me-5 m-2" id="dropdown"
-            ><img class="ms-2 me-2" src="icons/All cate.svg" alt="" />All
-            categories
-          </a>
-          <img class="pt-2 ms-3" src="icons/arrow_down.svg" alt="" />
+          <p class="m-2 me-4">
+            <img class="ms-2 me-2" src="icons/All cate.svg" alt="" />
+            All categories
+          </p>
+          <img class="pt-2 ms-5" src="icons/arrow_down.svg" alt="" />
         </div>
         <!--Home bar -->
-        <ul class="navbar-nav">
-          <li class="nav-item mx-3">
-            <a class="nav-link active" href="#">Home</a>
-          </li>
-          <li class="nav-item mx-2">
-            <a class="nav-link" href="#">Leaflet</a>
-          </li>
-          <li class="nav-item mx-2">
-            <a class="nav-link" href="#">Clubcard</a>
-          </li>
-          <li class="nav-item mx-2">
-            <a class="nav-link" href="#">Blog</a>
-          </li>
-          <li class="nav-item mx-2">
-            <a class="nav-link" href="#">Contact Us</a>
-          </li>
-          <li class="sale nav-item">
-            <a class="nav-link text-danger fw-bold" href="#">
-              Almost Finished <span class="badge bg-danger">SALE</span>
-            </a>
-          </li>
-        </ul>
+        <nav class="home_navbar navbar-nav d-flex gap-4">
+          <a class="nav-link active" href="home.html">Home</a>
+          <a class="nav-link" href="#">Leaflet</a>
+          <a class="nav-link" href="#">Clubcard</a>
+          <a class="nav-link" href="#">Blog</a>
+          <a class="nav-link" href="#">Contact Us</a>
+          <a class="sale nav-link text-danger fw-bold" href="#">
+            Almost Finished <span class="badge bg-danger">SALE</span>
+          </a>
+        </nav>
       </div>
 
       <!--Hero section-->
